--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,3 +66,5 @@ logger.application=DEBUG
 #    loglevel = WARNING
 #  }
 #}
+db.default.driver=org.postgresql.Driver
+db.default.url="postgres://umed:12345@localhost/myblog"
